--- a/playbook.yml
+++ b/playbook.yml
@@ -5,7 +5,7 @@
   vars:
     node_apps_location: /usr/local/opt/node
 
-  tasks:
+  pre_tasks:
     - name: Install EPEL repo.
       yum: name=epel-release state=present
 
@@ -22,12 +22,10 @@
     - name: Ensure firewalld is stopped (since this is a test server).
       service: name=firewalld state=stopped
 
-    - name: Install Node.js and npm.
-      yum: name=npm state=present enablerepo=epel
+  roles:
+    - nodejs
 
-    - name: Install Forever (to run our Node.js app).
-      npm: name=forever global=yes state=present
-
+  tasks:
     - name: Ensure Node.js app folder exists.
       file: "path={{ node_apps_location }} state=directory"
 
